# simple_actions

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  package.xml  setup.cfg  setup.py
doc/: CPlusPlusClient.md  CPlusPlusServer.md  PythonClient.md  PythonServer.md
include/simple_actions/: simple_client.hpp  simple_server.hpp  utilities.hpp
simple_actions/: __init__.py  simple_client.py  simple_server.py  utilities.py
test/: complex_setup.cpp  smoke.cpp  smoke.test.py
